2005-09-01  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm: Sebastien Aperghis-Tramoni indicates that File::Temp
	works with perl 5.004 so change the minimum perl version.

	* Temp.pm: Use effective uid rather than real uid (Alexey Tourbin)

2005-02-22  Tim Jenness  <timj@jach.hawaii.edu>

	--- RELEASE V0.16 ---
	
	* Temp.pm: Remove spurious debug statement

2005-02-21  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE V0.15 ---
	
	* Temp.pm (unlink_on_destroy): Add post-object creation method to
	control whether the temp file will be unlinked when the object
	goes out of scope.
	
	* Temp.pm: Increase maximum number of tries before aborting.

	* Temp.pm: Add $KEEP_ALL to allow the temporary files to be
	retained whilst debugging (suggestion from Ed Avis [and others]).

	* Temp.pm: Temp files should have been opened O_NOFOLLOW rather
	than O_FOLLOW! (thanks to Marc Tardif)

	* Temp.pm: Add cleanup() function so that temp files that would be
	removed by an END block can be removed by a daemon. (RT wishlist
	item #6928 by Robert Rothenberg)

	* Temp.pm: Force chmod on file before unlinking it. This can be a
	problem on windows (see RT bug #6935). tempdir() has been fixed by
	Slaven's earlier patch to change the rmtree arguments.

	* Temp.pm (top_system_uid): Add interix patch from Todd Vierling

	* Temp.pm (_gettemp): Pod patch from Steven Lembark clarifying the
	error message associated with two few XXXXs

	* Temp.pm: Add note on forking and make sure that END blocks only
	remove temporary files created by the current process ID (prompted
	by Daniel Macks in RT bug #11067)

	* Temp.pm (cmpstat): Roman Vasicek reported problems with the _
	filehandle. Play it safe and remove that handle. (see RT bug #8822)

	* t/tempfile.t: Add test for write proteceted temp file (thanks to
	Slaven Rezic)

	* Temp.pm (_can_do_level): Change argument to rmtree to make it
	attempt to remove write-protected files on cleanup (thanks to
	Slaven Rezic)

	* Temp.pm: Add note on binmode usage
	